For Java 9+, add javac option "--add-modules=java.xml.ws"